fixed:: logout with that align with our colour scheme

--- a/Frontend RRF/src/styles/Logout.module.css
+++ b/Frontend RRF/src/styles/Logout.module.css
@@ -4,18 +4,22 @@
   align-items: center;
   min-height: 100vh;
   width: 100vw;
-  background: linear-gradient(109.6deg, rgb(78, 62, 255) 11.2%, rgb(164, 69, 255) 91.1%);
-  font-family: 'Poppins', sans-serif;
+  background-image: url('/bg.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  font-family: 'Poppins', sans-serif; 
 }
 
 .container {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 240px;
-  height: 240px;
-  padding: 40px;
-  background: #ffffff;
+  width: 40%;
+  height: 80%;
+  padding: 80px;
+  background: rgba(255, 255, 255, 0.3);
+  backdrop-filter: blur(10px);
+  border: 2px solid rgba(255, 255, 255, 0.5);
   border-radius: 30px;
   box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.15);
   text-align: center;
